# Czuch

./: .NetrwMessage.swp  .gitignore  .gitmodules  BuildInfo.txt  CMakeLists.txt  Czuch.sln  README.md  premake-glfw.lua  premake-imgui.lua  premake-yaml-cpp.lua  premake5.lua
Czuch/: CMakeLists.txt  Czuch.vcxproj  Czuch.vcxproj.filters
Czuch/Assets/Models/: barrel.mtl
Czuch/Assets/Shaders/: fragShader.frag
Czuch/Data/Shaders/: Base.frag  Base.vert  CompileShaders.bat  fragShader.frag  vertShader.vert
Czuch/Source/: Czuch.h  EngineRoot.cpp  EngineRoot.h  czpch.h
Czuch/Source/Core/: AccessContainer.cpp  AccessContainer.h  Common.h  EngineCore.h  FileHelper.h  KeyCodes.h  Math.h  Singleton.h  StringID.cpp  StringID.h  Time.cpp  Time.h  TimeDiffCounter.h  TreeNode.h  Window.cpp  Window.h
Czuch/Source/Czuch/: EngineRoot.cpp  EngineRoot.h
Czuch/Source/Czuch/Core/: EngineCore.h
Czuch/Source/Events/: Event.cpp  Event.h  IEventsListener.h
Czuch/Source/Events/EventsTypes/: ApplicationEvents.h  InputEvents.cpp  InputEvents.h  KeyDownEvent.cpp  KeyDownEvent.h  MouseEvents.h
Czuch/Source/Platform/GLFW/: ImGuiGLFWBackend.cpp
Czuch/Source/Platform/Vulkan/: ImGuiVulkanBackend.cpp  ImGuiVulkanBackend.h
Czuch/Source/Platform/Windows/: WinWindow.cpp
Czuch/Source/Renderer/: CommandBuffer.h  Graphics.cpp  Graphics.h  GraphicsDevice.h  GraphicsResourceAccessContainer.cpp  RenderContext.cpp  RenderContext.h  RenderPassControl.cpp  RenderPassControl.h  Renderer.h
Czuch/Source/Renderer/FrameGraph/: FrameGraph.cpp  FrameGraph.h  FrameGraphBuilderHelper.cpp  FrameGraphBuilderHelper.h
Czuch/Source/Renderer/Vulkan/: DescriptorAllocator.cpp  DescriptorAllocator.h  VulkanBase.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCore.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanRenderer.cpp  VulkanRenderer.h
Czuch/Source/Serialization/: ISerializer.h  SceneSerializer.cpp  SceneSerializer.h  SerializationComponentHelper.cpp  SerializationComponentHelper.h
Czuch/Source/Subsystems/: BaseSubsystem.h  EventsManager.cpp  EventsManager.h  InputManager.cpp  Logging.cpp  Logging.h
Czuch/Source/Subsystems/Assets/: AssetManager.cpp  AssetManager.h  AssetsManager.cpp  AssetsManager.h  BuildInAssets.cpp  BuildInAssets.h  LoadSettingsPerType.h  SettingsPerType.h
Czuch/Source/Subsystems/Resources/: Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourcesManager.cpp  ResourcesManager.h  ShaderResource.cpp  ShaderResource.h  ShaderResourceManager.cpp  ShaderResourceManager.h
Czuch/Source/Subsystems/UI/: ImGUIManager.cpp  ImGUIManager.h  ImGuiCompiler.cpp  UIBaseElement.h  UIBaseManager.cpp  UIBaseManager.h
Czuch/source/: Czuch.h  EngineRoot.cpp  EngineRoot.h  czpch.cpp  czpch.h
Czuch/source/Core/: AccessContainer.h  Common.h  EngineCore.h  FileHelper.h  GUID.cpp  GUID.h  Math.cpp  Math.h  MemoryControl.h  MouseCodes.h  Singleton.h  StringID.cpp  Time.cpp  Time.h  TimeDelta.cpp  TimeDelta.h  TimeDiffCounter.cpp  TimeDiffCounter.h  TreeNode.cpp  TreeNode.h  UpdatableValue.h  Window.cpp
Czuch/source/Events/: Event.h  IEventsListener.h
Czuch/source/Events/EventsTypes/: ApplicationEvents.cpp  InputEvents.cpp  MouseEvents.cpp
Czuch/source/Platform/Mac/: MacWindow.cpp  MacWindow.h
Czuch/source/Platform/Windows/: WinUtils.cpp  WinUtils.h  WinWindow.cpp  WinWindow.h
Czuch/source/Renderer/: CommandBuffer.h  DebugDraw.h  Graphics.cpp  Graphics.h  GraphicsDevice.h  GraphicsResourceAccessContainer.h  RenderContext.cpp  RenderContext.h  RenderPassControl.cpp  RenderPassControl.h  Renderer.cpp  Renderer.h  RendererCommon.cpp  RendererCommon.h  SceneCameraControl.cpp  SceneCameraControl.h
Czuch/source/Renderer/FrameGraph/: FrameGraph.cpp  FrameGraph.h  FrameGraphBuilderHelper.cpp  FrameGraphBuilderHelper.h
Czuch/source/Renderer/Vulkan/: DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorLayoutCache.cpp  DescriptorLayoutCache.h  VulkanBase.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCore.cpp  VulkanCore.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanRenderer.cpp  VulkanRenderer.h
Czuch/source/Serialization/: ISerializer.cpp  ISerializer.h  SceneSerializer.cpp  SceneSerializer.h  SerializationComponentHelper.cpp  SerializationComponentHelper.h
Czuch/source/Subsystems/: BaseSubsystem.h  EventsManager.cpp  EventsManager.h  InputManager.cpp  InputManager.h  Logging.cpp  Logging.h  MemoryControl.cpp  MemoryControl.h
Czuch/source/Subsystems/Assets/: AssetManager.cpp  AssetManager.h  AssetsManager.cpp  AssetsManager.h  BuildInAssets.cpp  BuildInAssets.h  SettingsPerType.h
Czuch/vendors/Glad/: Glad.vcxproj  premake-glad.lua
Czuch/vendors/ImGui/: Imgui.vcxproj
Czuch/vendors/glm/: fwd.hpp  packing.hpp
Czuch/vendors/vma/: vk_mem_alloc.h
Czuch/vendors/yaml-cpp/: yaml-cpp.vcxproj
CzuchEditor/: CMakeLists.txt  CzuchEditor.vcxproj  CzuchEditor.vcxproj.filters  imgui.ini
CzuchEditor/Assets/Scenes/: testScene.scene
CzuchEditor/Assets/Shaders/: DepthLinearPrepassShader.frag  DepthPrepassShader.vert
CzuchEditor/source/: EditorCommon.cpp  EditorCommon.h  EditorControl.cpp  EditorControl.h  ImGuiCompiler.cpp
CzuchEditor/source/App/: CzuchEditorApplication.cpp
CzuchEditor/source/Commands/: EditorCommandsControl.cpp  EditorCommandsControl.h  IEditorCommand.h
CzuchEditor/source/EditorWindows/: AssetsEditorWindow.cpp  AssetsEditorWindow.h  AssetsInfoEditorWindow.cpp  AssetsInfoEditorWindow.h  BaseEditorWindow.cpp  BaseEditorWindow.h  RenderGraphEditorWindow.cpp  RenderGraphEditorWindow.h
CzuchEditor/source/Panels/: BaseEditorPanel.cpp  BaseEditorPanel.h  EntityInspectorEditorPanel.cpp  EntityInspectorEditorPanel.h  SceneHierarchyEditorPanel.cpp  SceneHierarchyEditorPanel.h
Playground/: CMakeLists.txt  Playground.vcxproj  Playground.vcxproj.filters  imgui.ini
Playground/Assets/Shaders/: VertexFinalPassShader.vert  fragShader.frag  vertShader.vert
Playground/Source/: Application.cpp
Playground/source/: Application.cpp
(+197 files in other folders)
